--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -9,18 +9,27 @@
   </view>
 
 	<view class="section">
-		<view class="line judgement">个人信息</view>
+    <navigator url="information/display/information">
+		  <view class="line judgement">个人信息</view>
+    </navigator>
+    
+    <navigator url="address/display/address">
+		  <view class="line judgement">我的地址</view>
+    </navigator>
+
+    <view class="line judgement">我的宿舍楼</view>
 		<view class="line judgement">消息通知</view>
-		<view class="line judgement">我的任务</view>
-		<view class="line judgement">我的地址</view>
 	</view>
+
+  <view class="section">
+		<view class="line judgement">已接受的任务</view>
+		<view class="line judgement">已发布的任务</view>
+	</view>
+
 	<view class="section">
 		<view class="line judgement">我的金币<text class="tl">余额：￥0</text></view>
 	</view>
-	<view class="section">
-		<view class="line judgement">XXXX</view>
-		<view class="line judgement">XXXX</view>
-	</view>
+
 	<view class="section">
 		<view class="line judgement">帮助与反馈</view>
 		<view class="line judgement">在线客服<text class="tl">9:00 - 23:00</text></view>
