--- a/pages/mine/mine.wxss
+++ b/pages/mine/mine.wxss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background:#fee767;
+  background:#efefef;
 }
 
 .userinfo-avatar {
@@ -10,7 +10,7 @@
   height: 128rpx;
   margin: 20rpx;
   border-radius: 50%;
-  border: 2px solid #fee767;
+  border: 2px solid #efefef;
 }
 
 .userinfo-nickname {
