--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,4 +1,10 @@
 <!--index.wxml-->
+<i-tabs current="{{ current }}" bindchange="handleChange">
+    <i-tab key="tab1" title="选项1"></i-tab>
+    <i-tab key="tab2" title="选项2"></i-tab>
+    <i-tab key="tab3" title="选项3"></i-tab>
+</i-tabs>
+
 <view class="container">
   <scroll-view scroll-y="true" scroll-into-view="{{scrollIntoView}}" bindscroll="onScroll">
 
@@ -17,16 +23,13 @@
 				</view>
 			</view>
 
-			<view class="shop">
-				<navigator url="/page/shop/shop?id={{item.id}}">
-					<view class="section">第一个任务</view>
-				</navigator>
-        <view class="section">第二个任务</view>
-        <view class="section">第三个任务</view>
+      
+      <i-card title="任务标题" extra="发布人昵称" thumb="https://i.loli.net/2017/08/21/599a521472424.jpg">
+        <view slot="content">任务内容</view>
+        <view slot="footer">时间</view>
+      </i-card>
 
-        <view class="loading">努力加载中…</view>
-			</view>
-
+			
 		</view>
 
   </scroll-view>
