合并publish页面的修改

--- a/pages/publish/publish.wxml
+++ b/pages/publish/publish.wxml
@@ -11,7 +11,7 @@
         <view class="weui-cells weui-cells_after-title">
           <view class="weui-cell weui-cell_input">
             <view class="weui-cell__bd">
-              <input class="weui-input" name="input" placeholder="请输入任务标题" />
+              <input class="weui-input" name="title" placeholder="请输入任务标题" />
             </view>
           </view>
         </view>
@@ -22,10 +22,28 @@
         <view class="weui-cells weui-cells_after-title">
           <view class="weui-cell weui-cell_input">
             <view class="weui-cell__bd">
-              <input class="weui-input" name="input" placeholder="请输入任务内容" />
+              <input class="weui-input" name="content" placeholder="请输入任务内容" />
             </view>
           </view>
         </view>
+      </view>
+
+      <view class="weui-cells__title">任务地点</view>
+      <view class="weui-cells weui-cells_after-title">
+        <view class="weui-cell weui-cell_input">
+          <view class="weui-cell__hd">
+            <view class="weui-label">当前选择</view>
+          </view>
+          <view class="weui-cell__bd">
+            <picker bindchange="bindCasPickerChange" value="{{dataIndex1}}" range="{{dataArray}}">
+                <view class="weui-input">{{dataArray[dataIndex]}}</view>
+            </picker>
+          </view>
+        </view>
+      </view>
+      
+      <view class="section {{reply?'on':'off'}}">
+        <input name="place" placeholder="请输入任务地点" type="text"/>
       </view>
 
       <view class="weui-cells__title">任务截止日期</view>
@@ -35,11 +53,11 @@
             <view class="weui-label">当前选择</view>
           </view>
           <view class="weui-cell__bd">
-            <picker mode="date" value="{{date}}" start="2015-09-01" end="2017-09-01" bindchange="bindDateChange">
-              <view class="weui-input">{{date}}</view>
+            <picker name='startDate'mode="date" value="{{startDate}}" bindchange="bindStartDateChange">
+               <view class="weui-input">{{startDate}}</view>
             </picker>
-            <picker mode="time" value="{{time}}" start="09:01" end="21:01" bindchange="bindTimeChange">
-              <view class="weui-input">{{time}}</view>
+            <picker name='startTime'mode="time" value="{{startTime}}" bindchange="bindStartTimeChange">
+               <view class="weui-input">{{startTime}}</view>
             </picker>
           </view>
         </view>
@@ -52,11 +70,11 @@
             <view class="weui-label">当前选择</view>
           </view>
           <view class="weui-cell__bd">
-            <picker mode="date" value="{{date}}" start="2015-09-01" end="2017-09-01" bindchange="bindDateChange">
-              <view class="weui-input">{{date}}</view>
+            <picker name='endDate'mode="date" value="{{endDate}}" bindchange="bindEndDateChange">
+               <view class="weui-input">{{endDate}}</view>
             </picker>
-            <picker mode="time" value="{{time}}" start="09:01" end="21:01" bindchange="bindTimeChange">
-              <view class="weui-input">{{time}}</view>
+            <picker name='endTime'mode="time" value="{{endTime}}" bindchange="bindEndTimeChange">
+               <view class="weui-input">{{endTime}}</view>
             </picker>
           </view>
         </view>
@@ -64,13 +82,14 @@
 
       <view class="page-section page-section-gap">
         <view class="page-section-title">赏金</view>
-        <slider value="20" name="slider" show-value ></slider>
+        <slider value="20" name="money" show-value ></slider>
       </view>
 
       <view class="btn-area">
         <button type="primary" formType="submit">提交</button>
         <button formType="reset">重置</button>
       </view>
+
     </form>
   </view>
 
