--- a/pages/publish/publish.wxml
+++ b/pages/publish/publish.wxml
@@ -82,7 +82,7 @@
 
       <view class="page-section page-section-gap">
         <view class="page-section-title">赏金</view>
-        <slider value="20" name="money" show-value ></slider>
+        <slider value="{{money}}" name="money" show-value ></slider>
       </view>
 
       <view class="btn-area">
