--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -9,40 +9,20 @@ scroll-view {
 	height: 100%;
 }
 
-
-
-.icons {
-	height: 370rpx;
-	padding: 20rpx 10rpx;
-	padding-bottom: 0;
+.add_icon{
+  position: fixed;
+  z-index: 9999;
+  width:42px;
+  height:42px;
+  bottom:30px;
+  right:20px;
 }
-.icons swiper-item {
-	width: 100%;
-	/*display: -webkit-flex;*/
-	/*flex-direction: row;*/
-	/*flex-wrap: wrap;*/
-	/*justify-content: center;*/
-}
-.icons .icon {
-	float: left;
-	display: -webkit-flex;
-	flex-direction: column;
-	flex-wrap: wrap;
-	width: 25%;
-	text-align: center;
-	margin: 10rpx 0;
-}
-.icons .icon image {
-	margin: 0 auto;
-	width: 100rpx;
-	height: 100rpx;
-}
-.icons .icon text {
-	color: #000;
-	font-size: 24rpx;
-	line-height: 2;
-}
-
+.tab{float: left; width: 33.3333%;text-align: center;padding: 10rpx 0; }
+.topTabSwiper{border-top: 1px solid rgb(255, 255, 255); border-bottom: 1px solid #ccc; zoom: 1;}
+.topTabSwiper:after{content: ""; clear: both;display: block;}
+.tabBorer{border-bottom: 1px solid #f00; color: #f00;}
+.swiper{width: 100%;}
+.swiper_con{text-align: center; width: 100%; height: 100%; padding: 80rpx 0;}
 
 .special .content {
 	width: 100%;
