--- a/pages/publish/publish.wxml
+++ b/pages/publish/publish.wxml
@@ -1,11 +1,45 @@
-<import src="../lib/head.wxml" />
-<import src="../lib/foot.wxml" />
 
-<view class="container">
+    <i-steps current="{{current}}">
+        <i-step>
+            <view slot="title">选择任务类型</view>
+            <view slot="content">这里是该步骤的描述信息</view>    
+        </i-step>
+        <i-step>
+            <view slot="title">填写任务信息</view>
+            <view slot="content">这里是该步骤的描述信息</view>
+        </i-step>
+        <i-step>
+            <view slot="title">设定任务时间</view>
+            <view slot="content">这里是该步骤的描述信息</view>
+        </i-step>
+        <i-step>
+            <view slot="title">其他</view>
+            <view slot="content">这里是该步骤的描述信息</view>
+        </i-step>
+    </i-steps>
 
-  <view class="page-body">
-    <form catchsubmit="formSubmit" catchreset="formReset">
+<form catchsubmit="formSubmit" catchreset="formReset">
 
+<swiper current="{{currentData}}" class='swiper' style="height:600px;" duration="300" bindclick="handleClick">
+  <swiper-item>
+      <view class="page-section">
+        <view class="weui-cells weui-cells_after-title">
+          <radio-group bindchange="radioChange">
+            <label class="weui-cell weui-check__label" wx:for="{{items}}" wx:key="{{item.value}}">
+
+              <view class="weui-cell__hd">
+                <radio value="{{item.value}}" checked="true"/>
+              </view>
+              <view class="weui-cell__bd">{{item.name}}</view>
+            </label>
+          </radio-group>
+        </view>
+      </view>
+
+    <i-button bindclick="handleClick">下一步</i-button>
+  </swiper-item>
+
+  <swiper-item>
       <view class="page-section">
         <view class="page-section-title">任务标题</view>
         <view class="weui-cells weui-cells_after-title">
@@ -27,7 +61,7 @@
           </view>
         </view>
       </view>
-
+    
       <view class="weui-cells__title">任务地点</view>
       <view class="weui-cells weui-cells_after-title">
         <view class="weui-cell weui-cell_input">
@@ -41,57 +75,86 @@
           </view>
         </view>
       </view>
-      
       <view class="section {{reply?'on':'off'}}">
         <input name="place" placeholder="请输入任务地点" type="text"/>
       </view>
 
-      <view class="weui-cells__title">任务截止日期</view>
+      <view class="weui-cells__title">任务交付地点</view>
       <view class="weui-cells weui-cells_after-title">
         <view class="weui-cell weui-cell_input">
           <view class="weui-cell__hd">
             <view class="weui-label">当前选择</view>
           </view>
           <view class="weui-cell__bd">
-            <picker name='startDate'mode="date" value="{{startDate}}" bindchange="bindStartDateChange">
-               <view class="weui-input">{{startDate}}</view>
-            </picker>
-            <picker name='startTime'mode="time" value="{{startTime}}" bindchange="bindStartTimeChange">
-               <view class="weui-input">{{startTime}}</view>
+            <picker name="placePicker"bindchange="bindCasPickerChange" value="{{dataIndex}}" range="{{dataArray}}">
+                <view class="weui-input">{{dataArray[dataIndex]}}</view>
             </picker>
           </view>
         </view>
       </view>
+      <view class="section {{reply?'on':'off'}}">
+        <input name="place" placeholder="请输入任务地点" type="text" value="{{place}}"/>
+      </view>
 
-      <view class="weui-cells__title">任务执行期限</view>
+      <i-button bindclick="handleClick">下一步</i-button>
+  </swiper-item>
+
+  <swiper-item>
+    <view class="weui-cells__title">任务截止日期</view>
       <view class="weui-cells weui-cells_after-title">
         <view class="weui-cell weui-cell_input">
           <view class="weui-cell__hd">
             <view class="weui-label">当前选择</view>
           </view>
           <view class="weui-cell__bd">
-            <picker name='endDate'mode="date" value="{{endDate}}" bindchange="bindEndDateChange">
-               <view class="weui-input">{{endDate}}</view>
+            <picker name='Dateddl'mode="date" value="{{Dateddl}}" bindchange="bindDateddlChange">
+               <view class="weui-input">{{Dateddl}}</view>
             </picker>
-            <picker name='endTime'mode="time" value="{{endTime}}" bindchange="bindEndTimeChange">
-               <view class="weui-input">{{endTime}}</view>
+            <picker name='Timeddl'mode="time" value="{{Timeddl}}" bindchange="bindTimeddlChange">
+               <view class="weui-input">{{Timeddl}}</view>
             </picker>
           </view>
         </view>
       </view>
 
+      <view class="page-section">
+        <view class="page-section-title">任务执行期限</view>
+        <view class="weui-cells weui-cells_after-title">
+          <view class="weui-cell weui-cell_input">
+            <view class="weui-cell__bd">
+              <input class="weui-input" name="TimeLimit" type="number" placeholder="请输入任务执行期限（？小时）" />
+            </view>
+          </view>
+        </view>
+      </view>
+
+      <i-button bindclick="handleClick">下一步</i-button>
+  </swiper-item>  
+
+  <swiper-item>
       <view class="page-section page-section-gap">
         <view class="page-section-title">赏金</view>
-        <slider value="20" name="money" show-value ></slider>
+        <slider value="{{money}}" name="money" show-value ></slider>
       </view>
+
+      <view class="page-section">
+        <view class="page-section-title">任务隐藏字段</view>
+        <view class="weui-cells weui-cells_after-title">
+          <view class="weui-cell weui-cell_input">
+            <view class="weui-cell__bd">
+              <input class="weui-input" name="HideContent" placeholder="请输入任务的隐藏字段" />
+            </view>
+          </view>
+        </view>
+      </view>
+
 
       <view class="btn-area">
         <button type="primary" formType="submit">提交</button>
         <button formType="reset">重置</button>
       </view>
+  </swiper-item>
+</swiper>
 
-    </form>
-  </view>
 
-  <template is="foot" />
-</view>
+</form>
