--- a/pages/publish/publish.wxss
+++ b/pages/publish/publish.wxss
@@ -27,3 +27,12 @@ form{
   }
 .on{display: block}
 .off{display: none}
+
+.radio-group {
+    border-bottom: 1px solid #ddd;
+}
+.radio {
+    display: block;
+    border-top: 1px solid #ddd;
+    padding: 5px;
+}
