--- a/pages/task/detail/detail.wxss
+++ b/pages/task/detail/detail.wxss
@@ -1,1 +1,14 @@
 /* pages/task/detail/detail.wxss */
+.view-wrap{
+  padding: 10px 20px;
+}
+
+.type-title{
+  padding: 10px 0;
+}
+
+.big{
+  font-size: 20px;
+  color: #3399FF;
+  font-weight: bold;
+}
