--- a/pages/task/accepted/accepted.wxss
+++ b/pages/task/accepted/accepted.wxss
@@ -4,3 +4,29 @@
 .tabBorer{border-bottom: 1px solid #f00; color: #f00;}
 .swiper{width: 100%;}
 .swiper_con{text-align: center; width: 100%; height: 100%; padding: 80rpx 0;}
+
+
+.section {
+	padding: 0;
+	color: #2e2e2e;
+	font-size: 30rpx;
+}
+.section .line {
+	margin-left: 30rpx;
+	padding-right: 30rpx;
+	line-height: 3;
+	border-bottom: 1px solid #efefef;
+}
+.section .line:last-child {
+	border-bottom: none;
+}
+.section .line:before {
+	content: '>';
+	float: right;
+	color: #aaa;
+	margin-left: 20rpx;
+}
+.section .line .tl {
+	float: right;
+	color: #aaa;
+}
