--- a/pages/task/detail/detail.wxml
+++ b/pages/task/detail/detail.wxml
@@ -1,26 +1,26 @@
 
 <i-panel title="任务标题">
-    <view style="padding: 15px;">带有标题的 Panel</view>
+    <view style="padding: 15px;">{{title}}</view>
 </i-panel>
 
 <i-panel title="任务内容">
-    <view style="padding: 15px;">带有标题的 Panel</view>
+    <view style="padding: 15px;">{{content}}</view>
 </i-panel>
 
 <i-panel title="任务执行地点">
-    <view style="padding: 15px;">带有标题的 Panel</view>
+    <view style="padding: 15px;">{{fromLocation}}</view>
 </i-panel>
 
 <i-panel title="任务交付地点">
-    <view style="padding: 15px;">带有标题的 Panel</view>
+    <view style="padding: 15px;">{{toLocation}}</view>
 </i-panel>
 
 <i-panel title="任务隐藏字段">
-    <view style="padding: 15px;">带有标题的 Panel</view>
+    <view style="padding: 15px;">{{HideContent}}</view>
 </i-panel>
 
     <view style="padding: 15px;">
-    <text class="type-title">任务执行期限</text>
+    <text class="type-title">任务限制时间</text>
     <i-count-down
             target="{{targetTime}}"
             countdown-class="big"
