--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -12,7 +12,7 @@
 			  <view class="title">当前任务</view>
         <view wx:for="{{tasks}}" wx:key="item">
           <navigator url="../details/details">
-            <i-card title="{{item.title}}" extra="{{item.nickname}}" thumb="{{item.img}}">
+            <i-card title="{{item.title}}" extra="{{item.nickname}}" >
               <view slot="content">{{item.content}}</view>
               <view slot="footer">{{item.time}}</view>
             </i-card>
