--- a/pages/details/details.wxml
+++ b/pages/details/details.wxml
@@ -2,7 +2,7 @@
     <view class="weui-cells weui-cells_after-title">
       <view class="weui-cell weui-cell_input">
         <view class="weui-cell__hd">
-          <view class="weui-label">此处头像</view>
+          <view class="weui-label">发布人昵称</view>
         </view>
         <view class="weui-cell__bd">
           <view class="weui-input">{{nickname}}</view>
