--- a/pages/task/published/published.wxml
+++ b/pages/task/published/published.wxml
@@ -1,17 +1,25 @@
-<!--pages/task/published/published.wxml-->
-<i-tabs current="{{ current }}" bindchange="handleChange">
-    <i-tab key="tab1" title="未接受"></i-tab>
-    <i-tab key="tab2" title="已接受"></i-tab>
-    <i-tab key="tab3" title="已取消"></i-tab>
-</i-tabs>
+<view class='topTabSwiper'>
+    <view class='tab  {{currentData == 0 ? "tabBorer" : ""}}'  data-current = "0" bindtap='checkCurrent'>未接受</view>
+    <view class='tab  {{currentData == 1 ? "tabBorer" : ""}}'  data-current = "1" bindtap='checkCurrent'>已接受</view>
+    <view class='tab  {{currentData == 2 ? "tabBorer" : ""}}'  data-current = "2" bindtap='checkCurrent'>已取消</view>
+</view>
 
-<i-panel>
-    <view style="padding: 15px;">
-      <i-panel class="cell-panel-demo">
-        <i-cell title="任务标题" label="任务地点" value="任务时间" is-link></i-cell>
-      </i-panel>
-    
+<swiper current="{{currentData}}" class='swiper' style="height:600px;" duration="300" bindchange="bindchange">
+  <swiper-item>
+
+    <view wx:for="{{tasks}}" wx:key="item">
+      <navigator url="../detail_pub/detail?taskID={{item.taskID}}&title={{item.title}}">
+      
+        <view class="section" style="padding: 15px;">
+          <i-panel class="cell-panel-demo">
+            <i-cell title="{{item.title}}" label="{{item.fromLocation}}" value="{{item.TimeLimit}}" is-link></i-cell>
+          </i-panel>
+        </view>
+      </navigator>
     </view>
-    
-    <i-button bind:click="handleClick" inline type="error">取消发布</i-button>
-</i-panel>
+
+  </swiper-item> 
+
+  <swiper-item><view class='swiper_con'>welcome come to 2</view></swiper-item>
+  <swiper-item><view class='swiper_con'>welcome come to 3</view></swiper-item>  
+</swiper>
