--- a/pages/mine/information/edit/edit.wxml
+++ b/pages/mine/information/edit/edit.wxml
@@ -5,36 +5,36 @@
 
        <view class="label-list">
          <view class="label">昵称</view>
-         <input placeholder="请输入您的昵称"  placeholder-class="place" name="nickname" value="{{nickname}}"/>
+         <input placeholder="请输入您的昵称"  placeholder-class="place" name="nickname" value="{{myUserData.nickname}}"/>
        </view>
 
        <view class="label-list">
          <view class="label">性别</view>
-         <radio-group class="radio-group" bindchange="radioChange">
-           <label class="radio" wx:for="{{sex}}" wx:key="{{index}}">
-             <radio value="{{item.id}}" checked="{{sexId == item.id}}"/>{{item.name}}
+         <radio-group name='sex'class="radio-group" bindchange="sexRadioChange">
+           <label class="radio" wx:for="{{sexItems}}" wx:key="{{index}}">
+             <radio value="{{item.value}}" checked="{{item.checked}}"/>{{item.value}}
            </label>
          </radio-group>
        </view>
          
        <view class="label-list">
          <view class="label">E-mail</view>
-         <input placeholder="请输入您的E-mail" value='{{mail}}' placeholder-class="place" name='mail'/>
+         <input placeholder="请输入您的E-mail" value='{{myUserData.mail}}' placeholder-class="place" name="mail"/>
        </view>
 
        <view class="label-list">
          <view class="label">手机号</view>
-         <input value="{{phoneNumber}}"   placeholder-class="place"/>
+         <input value="{{myUserData.phoneNumber}}"   placeholder-class="place" name="phoneNumber"/>
        </view>
 
        <view class="label-list">
          <view class="label">学号</view>
-         <input value="{{studentID}}"   placeholder-class="place"/>
+         <input value="{{myUserData.studentID}}"   placeholder-class="place" name="studentID"/>
        </view>
 
        <view class="label-list">
          <view class="label">所在学院</view>
-         <input value="{{department}}"   placeholder-class="place"/>
+         <input value="{{myUserData.department}}"   placeholder-class="place" name="department"/>
        </view>
 
        <button form-type='submit' class="submit">确定</button>
