--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -7,17 +7,21 @@
 
 <swiper current="{{currentData}}" class='swiper' style="height:600px;" duration="300" bindchange="bindchange">
   <swiper-item>
-
       <view class="section section-big">
 			  <view class="title">当前任务</view>
+
+
         <view wx:for="{{tasks}}" wx:key="item">
-          <navigator url="../details/details?taskID={{item.taskID}}&title={{item.title}}">
-            <i-card title="{{item.title}}" extra="{{item.nickname}}" >
-              <view slot="content">{{item.content}}</view>
-              <view slot="footer">{{item.time}}</view>
-            </i-card>
-          </navigator>
+          <view class='task'>
+            <navigator url="../details/details?taskID={{item.taskID}}&title={{item.title}}">
+              <i-card title="{{item.title}}" extra="{{item.nickname}}" >
+                <view slot="content">{{item.content}}</view>
+                <view slot="footer">{{item.time}}</view>
+              </i-card>
+            </navigator>
+          </view>
         </view>
+
 		  </view>
       
   </swiper-item>
