--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -24,6 +24,10 @@ scroll-view {
 .swiper{width: 100%;}
 .swiper_con{text-align: center; width: 100%; height: 100%; padding: 80rpx 0;}
 
+.task{
+  margin-bottom: 30rpx
+}
+
 .special .content {
 	width: 100%;
 	height: 181rpx;
