--- a/pages/mine/address/display/address.wxml
+++ b/pages/mine/address/display/address.wxml
@@ -2,15 +2,16 @@
     <navigator url="../add/add">
         <button>新增地址</button>
     </navigator>
-  
+
+  <view wx:for="{{place}}" wx:key="item">
     <view class="weui-cells weui-cells_after-title">  
       <view class="weui-cell weui-cell_input">
         <view class="weui-cell__hd">
-          <view class="weui-label">地址1</view>
+          <view class="weui-label">地址{{index+1}}</view>
         </view>
         <view class="weui-cell__bd">
-          <input class="weui-input" type="text" disabled="{{true}}" value="{{address}}" name="address"></input>
-          <input class="weui-input" type="text" disabled="{{true}}" value="{{detailAddress}}" name="detailAddress"></input>
+          <view class="weui-input">{{item.address}} {{item.detailAddress}}</view>
         </view>
       </view>
     </view>
+  </view>
