写了我的地址，我的宿舍楼的js，补充了个人信息的js。将数据全部放到了app里

--- a/pages/mine/address/add/add.wxml
+++ b/pages/mine/address/add/add.wxml
@@ -3,12 +3,12 @@
 
       <view class="label-list">
         <view class="label">地址</view>
-        <input placeholder="例：5号楼"  placeholder-class="place" name="address" value="{{address}}"/>
+        <input placeholder="例：5号楼"  placeholder-class="place" name="address" value="{{placeItem.address}}"/>
       </view>
 
       <view class="label-list">
         <view class="label">门牌号</view>
-        <input placeholder="例：203"  placeholder-class="place" name="detailAddress" value="{{detailAddress}}"/>
+        <input placeholder="例：203"  placeholder-class="place" name="detailAddress" value="{{placeItem.detailAddress}}"/>
       </view>
 
       <button form-type='submit' class="submit">确定</button>
