--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -11,7 +11,7 @@
 			  <view class="title">当前任务</view>
         <view wx:for="{{tasks}}" wx:key="item">
           <view class='task'>
-            <navigator url="../details/details?taskID={{item.taskID}}&title={{item.title}}">
+            <navigator url="../details/details?taskID={{item.taskID}}">
               <i-card title="{{item.title}}" extra="{{item.nickname}}" >
                 <view slot="content">{{item.content}}</view>
                 <view slot="footer">{{item.time}}</view>
