--- a/pages/task/detail_acc/detail.wxml
+++ b/pages/task/detail_acc/detail.wxml
@@ -1,3 +1,6 @@
+<i-panel title="任务类型">
+    <view style="padding: 15px;">{{type}}</view>
+</i-panel>
 
 <i-panel title="任务标题">
     <view style="padding: 15px;">{{title}}</view>
