修正使用全局变量

--- a/pages/task/detail_pub/detail.wxml
+++ b/pages/task/detail_pub/detail.wxml
@@ -1,4 +1,7 @@
 <!--pages/task/detail_pub/detail.wxml-->
+<i-panel title="任务类型">
+    <view style="padding: 15px;">{{type}}</view>
+</i-panel>
 
 <i-panel title="任务标题">
     <view style="padding: 15px;">{{title}}</view>
