--- a/pages/publish/publish.wxml
+++ b/pages/publish/publish.wxml
@@ -137,7 +137,7 @@
         <radio-group class="radio-group" bindchange="radioChange2">
           <radio class="radio" bindtap="bindtap1" wx:for-items="{{item2}}" wx:key="name" value="{{item.type}}" checked = "{{item.checked}}">
             <text>{{item.type}}</text>
-            <input class="weui-input" name="{{item.name}}" placeholder="{{item.description}}" />
+            <input class="weui-input" name="{{item.amount}}" placeholder="{{item.description}}" />
           </radio>
         </radio-group>
       </view>
