--- a/pages/task/detail_pub/detail.wxml
+++ b/pages/task/detail_pub/detail.wxml
@@ -23,6 +23,7 @@
     <view style="padding: 15px;">{{HideContent}}</view>
 </i-panel>
 
-<i-button bind:click="handleClick" inline type="error">取消发布</i-button>
+<i-button bind:click="handleClick1" inline type="success">确认完成</i-button>
+<i-button bind:click="handleClick2" inline type="error">取消发布</i-button>
 
 
